infrastructure/controllers/longhorn/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-web-route
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.shubhrajitpallob.dev`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: shubhrajit-pallob-tls
